force-app/main/default/objects/Service_Contract__c/Service_Contract__c.object-meta.xml
<CustomObject>
    <description>A customer's active tariff contract (which tariff on which meter).</description>
    <label>Service Contract</label>
    <pluralLabel>Service Contracts</pluralLabel>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>