force-app/main/default/objects/Service_Contract__c/fields/Account__c.field-meta.xml
<CustomField>
  <fullName>Account__c</fullName>
  <label>Account</label>
  <type>Lookup</type>
  <referenceTo>Account</referenceTo>
  <relationshipLabel>Service Contracts</relationshipLabel>
  <relationshipName>Service_Contracts</relationshipName>
</CustomField>