force-app/main/default/objects/Service_Contract__c/fields/Meter__c.field-meta.xml
<CustomField>
  <fullName>Meter__c</fullName>
  <label>Meter</label>
  <type>Lookup</type>
  <referenceTo>Meter__c</referenceTo>
  <relationshipLabel>Service Contracts</relationshipLabel>
  <relationshipName>Service_Contracts</relationshipName>
</CustomField>