force-app/main/default/objects/Service_Contract__c/fields/Tariff__c.field-meta.xml
<CustomField>
  <fullName>Tariff__c</fullName>
  <label>Tariff</label>
  <type>Lookup</type>
  <referenceTo>Tariff__c</referenceTo>
  <relationshipLabel>Service Contracts</relationshipLabel>
  <relationshipName>Service_Contracts</relationshipName>
</CustomField>